--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.3.3"
+bmp = "0.5.0"
 clap = { version = "4.5.19", features = ["derive"] }
 lazy_static = "1.5.0"
 serde = { version = "1.0.210", features = ["derive"] }
